--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -1,6 +1,6 @@
+# dummy file (this file should be created under src/main/<database> per database)
+database=
 database.password=
-#database.url=jdbc:mysql://localhost:3306/bookstore?zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&characterSetResults=UTF-8
-database.url=jdbc:log4jdbc:mysql://localhost:3306/bookstore?zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&characterSetResults=UTF-8
-database.username=root
-#database.driverClassName=com.mysql.jdbc.Driver
-database.driverClassName=net.sf.log4jdbc.DriverSpy
+database.url=
+database.username=
+database.driverClassName=
