--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <packaging>war</packaging>
     <version>1.0.0-BUILD-SNAPSHOT</version>
     <properties>
+        <database.dir>${basedir}/src/main/databases</database.dir>
         <java-version>1.6</java-version>
         <org.springframework-version>3.0.6.RELEASE</org.springframework-version>
         <org.aspectj-version>1.6.9</org.aspectj-version>
@@ -136,25 +137,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.15</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.mail</groupId>
-                    <artifactId>mail</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.jms</groupId>
-                    <artifactId>jms</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.sun.jdmk</groupId>
-                    <artifactId>jmxtools</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.sun.jmx</groupId>
-                    <artifactId>jmxri</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>1.2.16</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -236,7 +219,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <resource.directory>${basedir}/src/main/mysql</resource.directory>
+                <resource.directory>${database.dir}/mysql</resource.directory>
             </properties>
             <dependencies>
                 <dependency>
@@ -250,13 +233,42 @@
         <profile>
             <id>postgresql</id>
             <properties>
-                <resource.directory>${basedir}/src/main/postgresql</resource.directory>
+                <resource.directory>${database.dir}/postgresql</resource.directory>
             </properties>
             <dependencies>
                 <dependency>
                     <groupId>postgresql</groupId>
                     <artifactId>postgresql</artifactId>
                     <version>8.4-702.jdbc3</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>h2</id>
+            <properties>
+                <resource.directory>${database.dir}/h2</resource.directory>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                    <version>1.3.156</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>hsql</id>
+            <properties>
+                <resource.directory>${database.dir}/hsql</resource.directory>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.hsqldb</groupId>
+                    <artifactId>hsqldb</artifactId>
+                    <version>1.8.0.10</version>
+                    <scope>runtime</scope>
                 </dependency>
             </dependencies>
         </profile>
@@ -315,6 +327,11 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.0-SNAPSHOT</version>
+            </plugin>
         </plugins>
     </build>
 
@@ -330,4 +347,18 @@
             <url>http://maven.springframework.org/milestone</url>
         </repository>
     </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>apache.snapshots</id>
+            <name>Apache Snapshots</name>
+            <url>http://repository.apache.org/content/groups/snapshots-group/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
